Ajustes swagger
